@@ -34,8 +34,9 @@ sub print {
 	my $unit;
 	if ($obj->unit) {
 		if ($opts_hr->{'print_name'} && exists $opts_hr->{'cb'}) {
-			$unit = $opts_hr->{'cb'}->get('label', $obj->unit) || $obj->unit;
-		} else {
+			$unit = $opts_hr->{'cb'}->get('label', $obj->unit);
+		}
+		if (! defined $unit) {
 			$unit = $obj->unit;
 		}
 	}
